fixed spacing

--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -236,7 +236,7 @@ $gray:  #2a2a2a;
     width: 100%;
     margin-top: -5px;
     .divfeatured {
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
   }
   .newest {
