--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -299,7 +299,7 @@ footer {
   display: flex;
   flex-direction: column;
   margin-top: 10px;
-  margin-left: 1px;
+  margin-left: 20px;
   width: 100%;
   .thumbnail {
     flex-grow: 1;
@@ -859,8 +859,8 @@ hr {
   }
   .articles2-6 {
     width: 95%;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
 
   #exclusive-title--id, .exclusive-title {
@@ -868,7 +868,6 @@ hr {
     margin: 0 auto;
     margin-top: 8px !important;
   }
-
 
   #main_navigation {
     background-image: none;
@@ -912,7 +911,6 @@ hr {
 
   .articles2-6 {
     margin-bottom: 10px;
-    margin-top: 0px;
     display: block;
     .thumbnail {
       .article_title {
